--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,5 +1,5 @@
 figure.floatright {
-	max-width: 40%;
+	max-width: 30%;
 	width: auto;
 	height: auto;
 	float: right;
@@ -39,4 +39,16 @@ h2 {
 
 .portrait-title h3 {
 	font-size: 2rem;
+}
+
+.article-container {
+	max-width: 1000px;
+}
+
+.card-simple .article-title, .media.stream-item .article-title {
+    font-size: 2rem;
+}
+
+.card-simple .article-style, .media.stream-item .article-style {
+    font-size: 1rem;
 }
